Refactor domain package